# PiliPlus

./: .gitignore  CLAUDE.md  FINAL_VERIFICATION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  README.md  RUST_BRIDGE_FIX.md  RUST_INTEGRATION_GUIDE.md  RUST_INTEGRATION_QUICK_START.md  TASK_52_SUMMARY.md  TOKIO_FIX_VERIFICATION.md  VIDEO_INFO_CRASH_FIX.md  flutter_rust_bridge.yaml  pubspec.yaml  test_rust_api.dart
.github/workflows/: build.yml  nightly.yml
docs/analysis/: 2025-02-07-rust-http-replacement-feasibility.md
docs/designs/: 2025-02-07-rust-http-big-bang-design.md
docs/plans/: 2025-02-06-flutter-ui-integration.md  2025-02-06-flutter-validation-report.md  2025-02-06-rust-core-architecture-design.md  2025-02-06-rust-core-implementation.md  2025-02-07-beta-testing-enabled-report.md  2025-02-07-critical-fixes.md  (+30 more)
integration_test/: rcmd_api_facade_integration_test.dart  simple_test.dart  video_api_validation_integration_test.dart
lib/: main.dart
rust/: Cargo.toml  README.md  enable_beta_testing.dart  test_rust_verification.dart  test_wbi_simple.rs
rust/examples/: Cargo.toml  simple_wbi_test.rs  standalone_wbi_test.rs  wbi_example.rs
rust/migrations/: 001_initial.sql
rust/src/: frb_generated.rs  lib.rs  wbi_test.rs
rust/src/account/: login.rs  mod.rs  qrcode.rs  service.rs  tests.rs
rust/src/api/: account.rs  account.rs.bak  bridge.rs  comments.rs  comments.rs.bak  download.rs  download.rs.bak  dynamics.rs  dynamics.rs.bak  live.rs  live.rs.bak  mod.rs  rcmd.rs  rcmd_app.rs  search.rs  search.rs.bak  user.rs  user.rs.bak  video.rs  wbi.rs
rust/src/bilibili_api/: comments.rs  dynamics.rs  live.rs  mod.rs  search.rs  user.rs  video.rs
rust/src/download/: mod.rs  retry.rs  service.rs  task.rs
rust/src/error/: account_error.rs  api_error.rs  download_error.rs  mod.rs  storage_error.rs  tests.rs
rust/src/http/: cache.rs  client.rs  mod.rs  retry.rs  service.rs
rust/src/models/: account.rs  comments.rs  common.rs  download.rs  live.rs  mod.rs  rcmd.rs  search.rs  tests.rs  user.rs  video.rs
rust/src/services/: account.rs  container.rs  mod.rs
rust/src/storage/: mod.rs  service.rs  tests_direct.rs
rust/src/stream/: adapter.rs  mod.rs  tests.rs
rust/tests/: wbi_integration_test.rs
rust_builder/: pubspec.yaml
test/: rcmd_api_facade_test.dart  week1_internal_smoke_test.dart  week1_simple_smoke_test.dart
(+407 files in other folders)
