[package]
name = "pilicore"
version = "0.1.0"
edition = "2024"

[lib]
name = "pilicore"
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "brotli", "native-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
flume = "0.11"
async-stream = "0.3"
futures = "0.3"
urlencoding = "2.1"
md5 = "0.7"
percent-encoding = "2.3"

[dev-dependencies]
wiremock = "0.6"
proptest = "1.4"
tokio-test = "0.4"

[build-dependencies]
flutter_rust_bridge_codegen = "2.11.1"
