[package]
name = "standalone_wbi_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "standalone_wbi_test"
path = "standalone_wbi_test.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
percent-encoding = "2.3"
once_cell = "1.19"